add basic usage section

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adailtonribeiro/custom-web-components",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Custom web components",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
@@ -31,6 +31,11 @@
     "type": "git",
     "url": "git+https://github.com/adailtonribeiro/custom-web-components.git"
   },
+  "keywords": [
+    "Custom Web Components",
+    "Web Components",
+    "StencilJS"
+  ],
   "author": "Adailton Ribeiro",
   "license": "MIT",
   "bugs": {
